--- a/Prevu.Synoptics.V3085_Anviplas/P520.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P520.xaml
@@ -9,6 +9,66 @@
              x:Class="Prevu.Synoptics.P520" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
+        <Labels:Pipe Width="121" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="285" Canvas.Top="50" VisibilityComponent="515-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="80" StatusComponent="520-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="56" Canvas.Top="802" StatusComponent="564-01-MA1" Canvas.Left="1098" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="138" Canvas.Top="539" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="890" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" Canvas.Top="539" StatusComponent="520-01-MA1" PipeHeight="Medium" Canvas.Left="745" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="353" Canvas.Top="796" StatusComponent="554-01-MA1" PipeHeight="Medium" Canvas.Left="464" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="58" Canvas.Top="801" StatusComponent="554-01-MA1" Canvas.Left="342" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="144" VisibilitySignal="LS2" Canvas.Top="719" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="355" Height="12" VisibilityComponent="525-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="299" Canvas.Top="799" StatusComponent="564-01-MA1" PipeHeight="Medium" Canvas.Left="1206" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="72" VisibilitySignal="" Canvas.Top="751" StatusComponent="554-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1143" Height="12" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="86" VisibilitySignal="LS2" Canvas.Top="613" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1071" Height="12" VisibilityComponent="525-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="696" Canvas.Top="652" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="422" VisibilityComponent="525-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="376" Canvas.Top="718" StatusComponent="554-01-MA1" PipeHeight="Medium" Canvas.Left="808" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="88" VisibilitySignal="" Canvas.Top="758" StatusComponent="554-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="769" Height="12" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="141" Canvas.Top="539" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="1107" VisibilityComponent="525-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="138" StatusComponent="492-01-MA1" PipeHeight="Medium" Canvas.Left="82" Canvas.Top="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="58" Color="Water" StatusComponent="520-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="572" Canvas.Top="575" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -21,16 +81,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="114" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" Canvas.Left="348" Canvas.Top="378" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="80" StatusComponent="520-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="710" Canvas.Top="482" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -77,33 +127,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="56" Canvas.Top="733" StatusComponent="564-01-MA1" Canvas.Left="1085" Color="Air" Height="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="85" Canvas.Top="519" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="820" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="45" Canvas.Top="519" StatusComponent="520-01-MA1" PipeHeight="Medium" Canvas.Left="745" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="249" Canvas.Top="647" StatusComponent="554-01-MA1" PipeHeight="Medium" Canvas.Left="936" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="58" Canvas.Top="652" StatusComponent="554-01-MA1" Canvas.Left="814" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="142" VisibilitySignal="" Canvas.Top="585" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="829" Height="12" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="79" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="327" Canvas.Top="378" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="299" Canvas.Top="729" StatusComponent="564-01-MA1" PipeHeight="Medium" Canvas.Left="1207" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="72" VisibilitySignal="" Canvas.Top="682" StatusComponent="554-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1144" Height="12" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="657" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -166,23 +190,21 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:DRY_HeatingBattery Width="66" Canvas.Top="622" Canvas.Left="769" Height="65" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="777" Canvas.Top="499" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Canvas.Left="221" Canvas.Top="197" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:DRY_HeatingBattery Height="65" Width="66" Canvas.Left="1049" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1057" Canvas.Top="629" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_SLX_Silo_wAgitator Canvas.Left="180" Canvas.Top="23" Height="176" Width="131" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="9" Canvas.Left="349" Canvas.Top="217" Width="22" Fill="Gray" RadiusX="4" RadiusY="4" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1334" Canvas.Top="711" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1057" Canvas.Top="289" Height="50" Width="50"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:V01_DRY_DryerShutOff Canvas.Left="855" Canvas.Top="614" Height="50" Width="90" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:V01_DRY_DryerShutOff Canvas.Left="1136" Canvas.Top="695" Height="50" Width="90" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-      JumpFromLabel="564-01-MA1" 
-      JumpToLabel="570-01-MA1" Canvas.Left="1433" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_SCW200_ScrewPaddleGate Canvas.Left="329" Canvas.Top="214" Height="31" Width="46" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:DRY_HeatingBattery Width="66" Canvas.Top="771" Canvas.Left="296" Height="65" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="847" Canvas.Top="519" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:DRY_HeatingBattery Height="64" Width="66" Canvas.Left="1048" Canvas.Top="773" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1333" Canvas.Top="781" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DRY_DryerShutOff Canvas.Left="382" Canvas.Top="763" Height="50" Width="90" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DRY_DryerShutOff Canvas.Left="1135" Canvas.Top="765" Height="50" Width="90" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1155" Canvas.Top="753" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="402" Canvas.Top="751" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DV_Diverter Canvas.Left="1018" Canvas.Top="531" Height="68" Width="104" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="520-VALVE" DetailsPageName="D520" Canvas.Left="716" Canvas.Top="235" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel Canvas.Top="690" Canvas.Left="776" DetailsPageName="D550" ComponentName="550-DRY" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="560-DRY" DetailsPageName="D560" Canvas.Left="1056" Canvas.Top="771" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
       ComponentName="520-01-MA1"  Canvas.Left="771" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
@@ -201,18 +223,12 @@
       ComponentName="520-DCE"  Canvas.Left="612" Canvas.Top="235" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
       ComponentName="520-02-MA1"  Canvas.Left="869" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="552"  Canvas.Left="757" ComponentName="524-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="574" Canvas.Left="1037" ComponentName="554-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="574" Canvas.Left="927" ComponentName="547-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="653" Canvas.Left="1317" ComponentName="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel Canvas.Top="653" Canvas.Left="1208" ComponentName="557-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
       JumpFromLabel="520-23-CV1" 
       JumpToLabel="529-01-MA1" Canvas.Left="281" Canvas.Top="345" RenderTransformOrigin="0.272,-3.45" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
       JumpFromLabel="520-01-MA1" 
       JumpToLabel="492-01-MA1" Canvas.Left="39" Canvas.Top="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:V01_SCW200_ScrewPaddleGate Canvas.Left="329" Canvas.Top="214" Height="31" Width="46" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
         ComponentName="523-21-CV1"  Canvas.Left="308" Canvas.Top="253" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
@@ -229,7 +245,22 @@
                 </TransformGroup>
             </Labels:DetailsLabel.RenderTransform>
         </Labels:DetailsLabel>
-    <Machines:V01_VS_Airlock Canvas.Left="1156" Canvas.Top="683" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="875" Canvas.Top="602" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-  </Canvas>
+        <Labels:JumpLabel 
+        JumpFromLabel="521-01-MA1" 
+        JumpToLabel="515-21-CV1" Canvas.Left="377" Canvas.Top="20" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:JumpLabel 
+            JumpFromLabel="564-01-MA1" 
+            JumpToLabel="570-01-MA1" Canvas.Left="1432" Canvas.Top="771" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel Canvas.Top="778" Canvas.Left="228" DetailsPageName="D550" ComponentName="550-DRY" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="560-DRY" DetailsPageName="D560" Canvas.Left="983" Canvas.Top="779" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="572"  Canvas.Left="827" ComponentName="524-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="723" Canvas.Left="564" ComponentName="554-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="723" Canvas.Left="1207" ComponentName="557-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="723" Canvas.Left="1316" ComponentName="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="723" Canvas.Left="456" ComponentName="547-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:JumpLabel 
+            JumpFromLabel="525-21-CV1" 
+            JumpToLabel="511-01-MA1" Canvas.Left="1230" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel Canvas.Top="473"  Canvas.Left="1025" ComponentName="525-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    </Canvas>
 </UserControl>
