--- a/Prevu.Synoptics.V3923_Evanses/Pages/P288.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P288.xaml
@@ -8,6 +8,39 @@
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
+        <Labels:Pipe Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="398" Canvas.Top="680" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="ByProduct" Width="110" StatusComponent="286-01-MA1" Canvas.Left="493" Canvas.Top="552" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="371" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="373" Canvas.Top="558" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="365" Canvas.Top="459" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="ByProduct" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="588" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="377" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-22-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -76,31 +109,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="323" StatusComponent="293-01-MA1" Canvas.Left="992" Canvas.Top="675"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="398" Canvas.Top="680">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="489" Canvas.Top="596"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="371" Canvas.Top="589"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="373" Canvas.Top="558"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="69" StatusComponent="457-01-MA1" Color="Water" Canvas.Left="455" Canvas.Top="58"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="192" StatusComponent="246-01-MA1" Color="Water" Canvas.Left="324" Canvas.Top="224">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="365" Canvas.Top="459">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -131,42 +141,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="585" Canvas.Top="607">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1154" Canvas.Top="242">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
                     <SkewTransform/>
                     <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="540">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="509">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
@@ -181,7 +161,6 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="577" Canvas.Top="600"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="319" Canvas.Top="339"/>
         <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1181" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:WaterPump.RenderTransform>
@@ -224,7 +203,26 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:V01_RTF_Microfilter Canvas.Left="418" Canvas.Top="489" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="540" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform />
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="306" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="319" Canvas.Top="251" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
                 <TransformGroup>
@@ -238,6 +236,8 @@
         <Machines:V01_DCT_Decanter Canvas.Left="870" Canvas.Top="409" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="94" Canvas.Left="444" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="468" Canvas.Top="755" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="579" Canvas.Top="560" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_RTF_Microfilter Canvas.Left="418" Canvas.Top="489" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="527" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="283-01-MA1" JumpToLabel="457-01-MA1" Canvas.Left="511" Canvas.Top="25" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="283-01-MA1" JumpToLabel="477-01-MA1" Canvas.Left="566" Canvas.Top="98" Direction="Left"/>
@@ -246,6 +246,7 @@
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1314" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="200" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="246-01-MA1" Canvas.Left="144" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="534" Canvas.Top="580" HideComponentName="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="283" Canvas.Top="194"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1159" Canvas.Top="219"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1159" Canvas.Top="706"/>
@@ -255,13 +256,9 @@
         <Labels:DeviceLabel ComponentName="288-71-ECS1" Canvas.Left="850" Canvas.Top="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="288-71-ECS3" Canvas.Left="970" Canvas.Top="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="288-22-CV1" Canvas.Left="850" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-41-LT1" Canvas.Left="443" Canvas.Top="570"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="584"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-01-MA1" Canvas.Left="557" Canvas.Top="499"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="516"/>
-        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="335" Canvas.Top="465" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-01-MA1" Canvas.Left="935" Canvas.Top="430"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-41-LT1" Canvas.Left="936" Canvas.Top="498"/>
         <Labels:DeviceLabel ComponentName="285-61-LS1" Canvas.Left="517" Canvas.Top="683" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="426" Canvas.Top="580"/>
     </Canvas>
 </UserControl>
